export type Priority = {
  id: string;
  name: string;
  color: string;
  borderColor?: string;
  icon?: string;
};
