export type Status = {
  id: string;
  name: string;
  color: string;
  icon?: string;
};
